Update models and entities, add services with processing logic

--- a/bicycleShopCore/pom.xml
+++ b/bicycleShopCore/pom.xml
@@ -18,4 +18,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <artifactId>bicycleShopPersistence</artifactId>
+            <groupId>com.aleksandar</groupId>
+        </dependency>
+    </dependencies>
 </project>
